  ``http://foo/*path_info``).  When this is the case, the
  ``PATH_INFO`` environment variable is set to the value in the match
  dict, and the ``SCRIPT_NAME`` is appended to with the prefix of the
  original ``PATH_INFO`` not including the value of the new variable.

- The notfound debug now shows the traversed path, the virtual root,
  and the virtual root path too.

0.7.0 (2009-04-11)
==================

Bug Fixes
---------

- Fix a bug in ``repoze.bfg.wsgi.HTTPException``: the content length
  was returned as an int rather than as a string.
 
- Add explicit dependencies on ``zope.deferredimport``,
  ``zope.deprecation``, and ``zope.proxy`` for forward compatibility
  reasons (``zope.component`` will stop relying on
  ``zope.deferredimport`` soon and although we use it directly, it's
  only a transitive dependency, and ''zope.deprecation`` and
  ``zope.proxy`` are used directly even though they're only transitive
  dependencies as well).

- Using ``model_url`` or ``model_path`` against a broken model graph
  (one with models that had a non-root model with a ``__name__`` of
  ``None``) caused an inscrutable error to be thrown: ( if not
  ``_must_quote[cachekey].search(s): TypeError: expected string or
  buffer``).  Now URLs and paths generated against graphs that have
  None names in intermediate nodes will replace the None with the
  empty string, and, as a result, the error won't be raised.  Of
  course the URL or path will still be bogus.

Features
--------

- Make it possible to have ``testing.DummyTemplateRenderer`` return
  some nondefault string representation.

- Added a new ``anchor`` keyword argument to ``model_url``.  If 
  ``anchor`` is present, its string representation will be used 
  as a named anchor in the generated URL (e.g. if ``anchor`` is 
  passed as ``foo`` and the model URL is 
  ``http://example.com/model/url``, the generated URL will be 
  ``http://example.com/model/url#foo``).

Backwards Incompatibilities
---------------------------
